--- a/WeatherApp/weather.html
+++ b/WeatherApp/weather.html
@@ -2,63 +2,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>Weather Report</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-
     <script src="weather.js"></script>
 </head>
-<body onload="getLocation();">
+<body>
     <div class="container">
         <h1> Weather </h1>
-       <div class="row bg-warning mb-4">
+       <div class="row mb-4">
             <div class="col">
                 <div class="input-group mb-3 mt-3">
-                    <input type="text" id="location" placeholder="Place">
-                    <button type="button" class="btn button-round btn-primary btn-sm" onclick="var url=getWeather(url);"> GET</button>
+                    <input type="text" id="location" placeholder="location">
+                    <button type="button" class="btn button-round btn-dark" onclick="getWeather();"> GET</button>
                 </div>
-            </div>
-            <div class="col">
-                        
-            <div class="input-group mb-3 mt-3">
-                <input type="radio" class="btn-check" onclick="var url=getURL();getWeather(url);" name="options-outlined" id="metric" autocomplete="off" checked="">
-                <label class="btn btn-outline-success" for="metric">Metric: °C, m/s</label>
-
-                <input type="radio" class="btn-check" onclick="var url=getURL();getWeather(url);" name="options-outlined" id="imperial" autocomplete="off">
-                <label class="btn btn-outline-danger" for="imperial">Imperial: °F, mph</label>
-            </div>
-
-            </div>
-        </div>    
+            </div>        </div>    
 
         <div class="row bg-white mb-4">
             <div class="col">
-
                 <div class="card mt-4">
                     <div class="card-body">
-                        <p class="card-text text-warning" id="dtime">Tue Jul 19 2022 18:36:03 GMT-0700 (Pacific Daylight Time)</p>
-                        <h2 class="card-title" id="city"></h2>
-                        <span id="temp">--°C</span></h4>
-                        <span class="bg-danger p-2 mb-2" id="desc"> </span>
+                       <span id="temp">--</span></h4>
+                       <span id="metric">°C</span></h4>
+                        <span class="p-2 mb-2" id="desc"> </span>
                        </div>
                 </div>
             </div>
         </div>
-
-    
 </div>
-  <script crossorigin="" type="text/javascript" src="https://codesandbox.io/static/js/watermark-button.be960f43b.js"></script>
   
-<iframe id="sb__open-sandbox1" style="
-      position: fixed;
-      margin: 0;
-      padding: 0;
-      bottom: 16px;
-      right: 16px;
-      border: none;
-      width: 118px;
-      height: 36px;
-      z-index: 9999999999999;
-    "></iframe></body></html>
+
